@@ -91,7 +91,7 @@ namespace FeatureAdmin
             }
 
             // check all web apps and everything under
-            foreach (SPWebApplication webApp in GetAllWebApps())
+            foreach (SPWebApplication webApp in WebAppEnumerator.GetAllWebApps())
             {
                 try
                 {
@@ -119,15 +119,6 @@ namespace FeatureAdmin
                 }
             }
             return;
-        }
-        private SPWebApplicationCollection GetAllWebApps()
-        {
-            SPWebApplicationCollection webapps = SPWebService.ContentService.WebApplications;
-            foreach (SPWebApplication adminApp in SPWebService.AdministrationService.WebApplications)
-            {
-                webapps.Add(adminApp);
-            }
-            return webapps;
         }
         private void CheckFarm()
         {
